--- a/test_ image.html
+++ b/test_ image.html
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <img src="https://www.bleepstatic.com/content/hl-images/2023/10/02/Hacker_headpic.jpg" alt="Fullscreen Image">
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fsoundcloud.com%2Fyandere-hogh-aishi-hogh%2Ftk78-rage-mode%3Fin%3Dazura-azu%252Fsets%252Fhard-shi&psig=AOvVaw3mDPE4f9GmAQ5qT0QdpTex&ust=1741077508869000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCNjC2K3B7YsDFQAAAAAdAAAAABAJ" alt="Fullscreen Image">
     <script>
         document.addEventListener("click", () => {
             if (document.documentElement.requestFullscreen) {
