--- a/test_ image.html
+++ b/test_ image.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <img src="https://images.steamusercontent.com/ugc/1834666476221928183/38258A43C581799987A70A06915506A3AB8BFA18/?imw=637&imh=358&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=true">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTx0_6BQx0mGkVrVaGNGlj-wmmfbqieEbR9_Q&s">
     <script>
         document.addEventListener("click", () => {
             if (document.documentElement.requestFullscreen) {
