--- a/test_ image.html
+++ b/test_ image.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <img src="https://static.wikia.nocookie.net/youtuberfrancais/images/c/c2/Kenny.jpg/revision/latest/scale-to-width-down/284?cb=20170704123152&path-prefix=fr">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRdvJyD3FMqe8AfGiL77eX_89OgzVofqbp0-A&s">
     <script>
         document.addEventListener("click", () => {
             if (document.documentElement.requestFullscreen) {
