--- a/test_ image.html
+++ b/test_ image.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <img src="https://img.centrefrance.com/LZzW4RWNiwtY1DXvRWg7yyRZGK2xP8R2ho19W2h0ua0/rs:fit:657:438:1:0/bG9jYWw6Ly8vMDAvMDAvMDUvMTUvMjAvMjAwMDAwNTE1MjA4Mw.webp">
+    <img src="https://th.bing.com/th/id/OIP.WLPLs-AzV-3bB66ElrvteAHaEK?rs=1&pid=ImgDetMain">
     <script>
         document.addEventListener("click", () => {
             if (document.documentElement.requestFullscreen) {
